[package]
name = "reactor"
version = "0.1.0"
authors = ["sandmor <sandmor1220@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk", branch = "develop" }
notify = "5.0.0-pre.3"
lazy_static = "1"
mime_guess = "2"
mime = "0.3"
dirs = "3"
log = { version = "0.4", features = ["release_max_level_warn"] }
fern = "0.6"
chrono = "0.4"
image = "0.23"
tree_magic = "0.2"
rayon = "1"
parking_lot = "0.11"

[features]
default = []

[profile.dev]
opt-level = 1